Added Apache License, Version 2.0

--- a/README.adoc
+++ b/README.adoc
@@ -64,3 +64,9 @@ downloadDependencies {
 
 // ...
 --------------------------------------------------------------------
+
+## License
+
+....
+include::LICENSE[]
+....
